# mdhelper

./: .gitignore  README.md  environment.yml  minimum_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt  topology.cif
.github/workflows/: ci.yml  pypi.yml
assets/: logo.ipynb
docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  index.doctree
docs/_modules/: index.html
docs/_sources/: api.rst.txt
docs/api/: mdhelper.algorithm.accelerated.cosine_parallel_2d.html  mdhelper.algorithm.accelerated.cosine_sum_1d.html  mdhelper.algorithm.accelerated.cosine_sum_2d.html  mdhelper.algorithm.accelerated.cosine_sum_inplace_2d.html  mdhelper.algorithm.accelerated.cosine_sum_inplace_parallel_2d.html  mdhelper.algorithm.accelerated.cosine_sum_parallel_2d.html  mdhelper.algorithm.accelerated.cross_pythagorean_trigonometric_identity_1d.html  mdhelper.algorithm.accelerated.delta_fourier_transform_1d_1d.html  mdhelper.algorithm.accelerated.delta_fourier_transform_2d_2d.html  mdhelper.algorithm.accelerated.delta_fourier_transform_parallel_2d_2d.html  mdhelper.algorithm.accelerated.delta_fourier_transform_sum_2d_2d.html  mdhelper.algorithm.accelerated.delta_fourier_transform_sum_parallel_2d_2d.html  mdhelper.algorithm.accelerated.dot_1d_1d.html  mdhelper.algorithm.accelerated.html  mdhelper.algorithm.accelerated.inner_2d_2d.html  mdhelper.algorithm.accelerated.inner_parallel_2d_2d.html  mdhelper.algorithm.accelerated.pythagorean_trigonometric_identity_1d.html  mdhelper.algorithm.correlation.html  (+189 more)
recipe/: meta.yaml
tests/: test_algorithm_correlation.py  test_algorithm_molecule.py  test_algorithm_topology.py  test_algorithm_unit.py  test_algorithm_utility.py  test_analysis_electrostatics.py  test_analysis_polymer.py  test_analysis_profile.py  test_analysis_structure.py  test_analysis_transport.py  test_openmm_file_reporter.py  test_openmm_reporter.py  test_openmm_topology.py  test_openmm_unit.py
(+519 files in other folders)
