[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "mdhelper"
version = "0.0.1"
authors = [
  { name = "Benjamin B. Ye", email = "bye@caltech.edu" }
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
description = """
A batteries-included toolkit of analysis modules and helper functions 
for molecular dynamics (MD) simulations.
"""
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]

[project.urls]
"Homepage" = "https://github.com/bbye98/mdhelper"
"Bug Tracker" = "https://github.com/bbye98/mdhelper/issues"